Importing IWD_Opc legacy release 3.2.3

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "magento-hackathon/magento-composer-installer": "*"
-    }
+    },
+    "extra": { "package-xml": "package.xml" }
 }
 
